--- a/home/templates/blog.html
+++ b/home/templates/blog.html
@@ -6,8 +6,8 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="section-title text-center mb-30px">
-                    <h2 class="title">Latest Blog</h2>
-                    <p class="sub-title">Dive into our collection of articles and discover fascinating insights, tips, and stories about handmade products that will ignite your creativity and passion for crafting.</p>
+                    <h2 class="title">{{ DYNAMIC_TEXTS.blog_tag|safe }}</h2>
+                    <p class="sub-title">{{ DYNAMIC_TEXTS.blog_description|safe }}</p>
                 </div>
             </div>
         </div>
