--- a/home/templates/product.html
+++ b/home/templates/product.html
@@ -6,8 +6,8 @@
             <!-- Section Title Start -->
             <div class="col-12">
                 <div class="section-title text-center mb-60px">
-                    <h2 class="title">Popular Categories</h2>
-                    <p>Find one that suits you best</p>
+                    <h2 class="title">{{ DYNAMIC_TEXTS.category_tag|safe }}</h2>
+                    <p>{{ DYNAMIC_TEXTS.category_description|safe }}</p>
                 </div>
                 <!-- Tab Start -->
                 <div class="tab-slider swiper-container slider-nav-style-1 small-nav">
