--- a/contact/templates/contact.html
+++ b/contact/templates/contact.html
@@ -47,11 +47,11 @@
         <div class="container">
             <div class="row align-items-center justify-content-center">
                 <div class="col-12 text-center">
-                    <h2 class="breadcrumb-title">Contact Us</h2>
+                    <h2 class="breadcrumb-title">{{ DYNAMIC_TEXTS.breadcrumbs.tag5|safe }}</h2>
                     <!-- breadcrumb-list start -->
                     <ul class="breadcrumb-list">
-                        <li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
-                        <li class="breadcrumb-item active">Contact Us</li>
+                        <li class="breadcrumb-item"><a href="{% url 'home' %}">{{ DYNAMIC_TEXTS.breadcrumbs.tag1|safe }}</a></li>
+                        <li class="breadcrumb-item active">{{ DYNAMIC_TEXTS.breadcrumbs.tag5|safe }}</li>
                     </ul>
                     <!-- breadcrumb-list end -->
                 </div>
@@ -66,15 +66,15 @@
                     <!-- Contact Info Section -->
                     <div class="col-lg-5">
                         <div class="contact-info">
-                            <span class="sub-title">Get In Touch</span>
-                            <h4 class="heading">Visit One Of Our Shop Contact Us Now</h4>
+                            <span class="sub-title">{{ DYNAMIC_TEXTS.contact_bar.title|safe }}</span>
+                            <h4 class="heading">{{ DYNAMIC_TEXTS.contact_bar.description|safe }}</h4>
                             <div class="single-contact">
                                 <div class="icon-box">
                                     <i class="pe-7s-call"></i>
                                 </div>
                                 <div class="info-box">
-                                    <h5 class="title">Phone:</h5>
-                                    <p><a href="tel:+380505033757">+380505033757</a></p>
+                                    <h5 class="title">{{ DYNAMIC_TEXTS.contact_bar.text1|safe }}</h5>
+                                    <p><a href="tel:+380505033757">{{ DYNAMIC_TEXTS.footer_contact.phone_numbers.0|safe }}</a></p>
                                 </div>
                             </div>
                             <div class="single-contact">
@@ -82,8 +82,8 @@
                                     <i class="pe-7s-mail"></i>
                                 </div>
                                 <div class="info-box">
-                                    <h5 class="title">Email:</h5>
-                                    <p><a href="mailto:demo@example.com">mioca_shop@gmail.com</a></p>
+                                    <h5 class="title">{{ DYNAMIC_TEXTS.contact_bar.text2|safe }}</h5>
+                                    <p><a href="mailto:demo@example.com">{{ DYNAMIC_TEXTS.footer_contact.email|safe }}</a></p>
                                 </div>
                             </div>
                             <div class="single-contact">
@@ -91,8 +91,8 @@
                                     <i class="pe-7s-map-marker"></i>
                                 </div>
                                 <div class="info-box">
-                                    <h5 class="title">Address:</h5>
-                                    <p>370 7TH NEW YORK NY 10001-0041 USA</p>
+                                    <h5 class="title">{{ DYNAMIC_TEXTS.contact_bar.text3|safe }}</h5>
+                                    <p>{{ DYNAMIC_TEXTS.footer_contact.address|safe }}</p>
                                 </div>
                             </div>
                         </div>
@@ -100,8 +100,8 @@
                     <div class="col-lg-7">
                         <div class="contact-form">
                             <div class="contact-title mb-30">
-                                <h2 class="title" data-aos="fade-up" data-aos-delay="200">Leave a Message</h2>
-                                <p>And we will answer to whatever question you have about our product.</p>
+                                <h2 class="title" data-aos="fade-up" data-aos-delay="200">{{ DYNAMIC_TEXTS.contact_form.title|safe }}</h2>
+                                <p>{{ DYNAMIC_TEXTS.contact_form.description|safe }}</p>
                             </div>
                             <form class="contact-form-style" id="contact-form" action="{% url 'contact' %}" method="post">
                                 {% csrf_token %}
@@ -117,7 +117,7 @@
                                     </div>
                                     <div class="col-lg-12" data-aos="fade-up" data-aos-delay="200">
                                         {{ form.message }}
-                                        <button class="btn btn-primary mt-4" data-aos="fade-up" data-aos-delay="200" type="submit">Send Message</button>
+                                        <button class="btn btn-primary mt-4" data-aos="fade-up" data-aos-delay="200" type="submit">{{ DYNAMIC_TEXTS.contact_form.button|safe }}</button>
                                     </div>
                                 </div>
                             </form>
